remove overflow-x:hidden - prevented ScrollIndicator display

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -90,10 +90,10 @@
   font-weight: 500;
 }
 
-html,
+/* html,
 body {
   overflow-x: hidden;
-}
+} */
 
 @layer base {
   .prose a {
@@ -104,6 +104,9 @@ body {
 
   .prose a:hover:not(.exclude-underline) {
     text-decoration: underline !important;
+  }
+  .prose a.exclude-underline:hover {
+    text-decoration: none !important;
   }
 }
 
